========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-01-16

  - Removed branch "returns2" and moved associated projects script
    beancount.projects.returns to experiments/returns. This code isn't robust
    enough to work for everyone, and so therefore I'm moving it back to
    experiments until I have time to produce something that will work very
    robustly, and on all my own accounts as well.


2017-01-15

  (from branch "conversions")

  - Created and test beancount.core.convert Posting and Position conversion
    functions: get_units(), get_cost(), get_weight(), get_value() (for market
    value).

  - Implemented Inventory.reduce() and associated test, which works in
    conjunction with those.

  - Implemented more straightforward versions of convert_position() and
    convert_amount() in module beancount.core.convert, to convert positions and
    amounts to other currencies.

  - Deprecated Inventory.units(); use Inventory.reduce(convert.get_units)

  - Deprecated Inventory.cost(); use Inventory.reduce(convert.get_cost)

  - Deprecated Inventory.get_units() to Inventory.get_currency_units() in order to
    avoid future name confusion.

  - Deprecated Position.at_cost(); use convert.get_cost(position) instead.

  - Deprecated Position.get_cost(); use convert.get_cost(position) instead.

  - Deprecated b.c.interpolation.compute_cost_basis(); use
    Inventory.(pos for pos in positions if pos.cost is not
    None).reduce(convert.get_cost)
    instead.

  - Deprecated get_posting_weight(); use convert.get_weight() instead.

  - Removed b.ops.holdings.get_pholding_market_value(), which was unused.
    If you need a market-value function, use convert.get_value() instead.

  - Converted all the old code to these new converted functions.

  - Moved module beancount.ops.prices to beancount.core.prices, and added a
    deprecation warning.
