@@ -13,6 +13,7 @@ option.
 __copyright__ = "Copyright (C) 2013-2017  Martin Blais"
 __license__ = "GNU GPLv2"
 
+# IMPORTANT: This should be usable as a standalone script. Do not depend on Beancount.
 import argparse
 import collections
 import re
