@@ -6,6 +6,13 @@ Note: This file contains only changes in the 'default' branch.
 
 2017-01-16
 
+  - Moved bin/treeify to src/python/beancount/tools/treeify.py. The script is
+    still usable in a standalone form (no new dependencies have been added). To
+    have all the source code in one place is more convenient for maintenance.
+
+  - Created a beancount.tools package to contain all standalone tools which
+    don't depend on Beancount modules or packages.
+
   - Removed branch "returns2" and moved associated projects script
     beancount.projects.returns to experiments/returns. This code isn't robust
     enough to work for everyone, and so therefore I'm moving it back to
